<resources>
    <string name="app_name">ScoulJOBS</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_reset_password">Forgot Password?</string>
    <string name="auth_login">Login</string>
    <string name="auth_register">Register</string>
    <string name="auth_button_divider">or</string>
    <string name="registration_header">Register Here to Use Service.</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone(+256 XX XXXX XXX)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="education">Select Level of Education Attained</string>
    <string name="postal_address">Postal Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="education">
        <item>Certificate</item>
        <item>Diploma</item>
        <item>Degree</item>
        <item>Masters</item>
        <item>Doctorate</item>
    </string-array>

    <string name="field_error">Please fill this field.</string>
    <string name="email_err">Please enter valid email.</string>
    <string name="date_err">Please enter valid date.</string>
    <string name="phone_err">Please enter valid phone.</string>
    <string name="password_err">Please enter a password.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="job_add_header">Add Jobs</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="job_title">Job Title</string>
    <string name="job_category">Job Category</string>
    <string name="job_description">Job Description</string>
    <string name="job_qualification">Job Qualification</string>
    <string name="job_requirements">Job Requirements</string>
    <string name="job_add">Add Job</string>

    <string name="field_empty_err">Please fill this field.</string>

    <string name="search_here">Search by Job title, category , date</string>
    <string name="job_edit">Edit</string>
    <string name="job_delete">Delete</string>


</resources>
