<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/soul_icon" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scoul Jobs-- Get Employed Today."
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/icons"
            android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/auth_email"
                android:textColorHint="@color/icons"
                android:textColor="@color/icons"
                android:layout_marginTop="10dp"
                android:background="@drawable/textinput"
                android:inputType="textEmailAddress"
                android:hint="@string/auth_email"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/icons"
                android:textColor="@color/icons"
                android:id="@+id/auth_password"
                android:background="@drawable/textinput"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_password"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auth_password_reset"
            android:text="@string/auth_reset_password"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

    </LinearLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*"
        android:orientation="horizontal">
        <TableRow>


            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/auth_login"
                android:textColor="@color/menuText"
                android:background="@drawable/buttons"
                android:text="@string/auth_login"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/menuText"
                android:background="@drawable/button_option_two"
                android:id="@+id/auth_register"
                android:text="@string/auth_register"/>


        </TableRow>
    </TableLayout>

</RelativeLayout>